# LLM-Digit-Bias

./: LICENSE  PUBLIC_EXPORT_NOTES.md  README.md  README.zh-TW.md  pyproject.toml
configs/: baseline_mock.json  openai_example.json  phase2_transformers_qwen_0p5b_smoke.json  phase2_transformers_smollm2_135m_smoke.json  phase3_qwen_ordering_study.json  phase3_smollm_ordering_study.json  phase4_qwen15b_ordering_study.json  phase4_smollm17b_ordering_study.json  phase5_gemma3_1b_ordering_study_4bit.json  phase5_llama32_1b_ordering_study_4bit.json  phase5_llama32_3b_ordering_study_4bit.json  phase5_qwen3_4b_ordering_study_4bit.json  quickstart_mock.json  transformers_example.json  vllm_example.json
docs/: phase8_report_ready_outputs_20260329.md  report_skeleton.md
prompts/: default_templates.json  phase2_qwen_smoke_templates.json  phase2_smoke_templates.json
results/processed/: cross_model_comparison.csv  cross_model_comparison.md  cross_model_temperature_details.csv
src/: __init__.py  io_utils.py  prompts.py  types.py
src/analysis/: __init__.py  cross_model_comparison.py  cross_model_comparison_main.py  cross_model_plots.py  cross_model_plots_main.py  main.py  metrics.py  ordering_effects.py  ordering_effects_main.py  position_effects.py  position_effects_main.py  report.py  report_artifacts.py  report_artifacts_main.py  run_registry.py  run_registry_main.py
src/clients/: __init__.py  base.py  factory.py  mock.py  openai_compatible.py  transformers_client.py  vllm_client.py
src/parsing/: __init__.py  digit_parser.py  logprobs.py
src/runner/: config.py  main.py  (+4 more)
(+15 files in other folders)
